# fhirproof

./: #fhirproof.py#  .#fhirproof.py  .gitignore  2023-03_03_MaterialAliquotingMapping.json  AqtMatCheck.ct  AqtMatCheck.py  BehealterCheck.ct  BehealterCheck.py  DatesCheck.ct  DatesCheck.py  DerivmatCheck.ct  DerivmatCheck.py  FhirCheck.ct  FhirCheck.py  LocationCheck.ct  LocationCheck.py  MayUserEditOUCheck.ct  MayUserEditOUCheck.py  OUCheck.ct  OUCheck.py  OrgCheck.py  OrgCheckOld.py  ParentingCheck.ct  ParentingCheck.py  PrimaryInDbCheck.ct  PrimaryInDbCheck.py  PsnCheck.ct  PsnCheck.py  RestmengeCheck.ct  RestmengeCheck.py  config.yaml  dbc.py  dbcon.py  dbcq.py  dig.py  fhirhelp.py  fhirproof.ct  fhirproof.py  makefile  out.tmp  (+9 more)
ct/: tangle.py
fhirproof/: AmountUnitCheck.ct  AmountUnitCheck.py  AqtMatCheck.ct  AqtMatCheck.py  BehealterCheck.ct  BehealterCheck.py  DatesCheck.ct  DatesCheck.py  DerivmatCheck.ct  DerivmatCheck.py  FhirCheck.ct  FhirCheck.py  IdContainerCheck.ct  IdContainerCheck.py  LabvalMasterObs.ct  LabvalMasterObs.py  LamaObs.ct  LamaObs.py  LocationCheck.ct  LocationCheck.py  MayUserEditOUCheck.ct  MayUserEditOUCheck.py  OUCheck.ct  OUCheck.py  ObsMasterdataCheck.ct  ObsMasterdataCheck.py  ParentingCheck.ct  ParentingCheck.py  PrimaryInDbCheck.ct  PrimaryInDbCheck.py  PrimaryMatCheck.ct  PrimaryMatCheck.py  PsnCheck.ct  PsnCheck.py  RestmengeCheck.ct  RestmengeCheck.py  __init__.py  __main__.py  dbcq.py  fhirhelp.ct  (+12 more)
scripts/: sampleids-from-log.sh
test/: test_db.ct  test_db.py
test/in/: 2025-10-17_10-19-16_Observation_p0.json  2025-10-17_10-19-16_Specimen_p0.json
tests/: test_fhirproof.py
