[build-system]
requires = ["hatchling"] # list of packages needed to build your package
build-backend = "hatchling.build" # name of the python object that frontends use to perform the build

[project]
name = "fhirproof"
version = "0.0.1"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "fhir import checker"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "dbcq",
  "dig"
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
fhirproof = "fhirproof:__main__"