[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "fhirproof"
version = "0.0.12"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "fhir import checker"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "traction @ https://github.com/numlims/traction/archive/refs/tags/v0.0.5.zip",
  "pyyaml",
  "dbcq @ https://github.com/numlims/dbcq/archive/refs/tags/v0.0.3.zip",
  "dip @ https://github.com/numlims/dip/archive/refs/tags/v0.0.2.zip"
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
fhirproof = "fhirproof:__main__"

[tool.setuptools]
packages = ["fhirproof"]