[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "fhirproof"
version = "0.0.15"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "fhir import check"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "dbcq @ git+https://github.com/numlims/dbcq.git",
  "dip @ git+https://github.com/numlims/dip.git",
  "figs @ git+https://github.com/numlims/figs.git",  
  "traction @ git+https://github.com/numlims/traction.git",
  "tram @ git+https://github.com/numlims/tram.git",  
  "pyyaml",
  "natsort"
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
fhirproof = "fhirproof:__main__"

[tool.setuptools]
packages = ["fhirproof"]